--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "blessed": "^0.1.81",
     "chalk": "^4.1.2",
     "conf": "^15.0.2",
     "inquirer": "^8.2.7",
