feat: enhance config, API pagination, and code quality

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A TUI-based utility for managing a self-hosted Gitea instance via PowerShell 7+.",
   "main": "index.js",
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,9 @@
     "open": "^11.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0",
     "jest": "^30.2.0"
   }
 }
